--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>
 			My Page of Quotes
 		</title>
+		<link href="styles.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body>
 		<h1 style="color:blue">This web page is blank.</h1>
