--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<h2>(Well, mostly blank, anyway!)</h2>
 		<ul>
 			<li>'With great power, comes great responsibility.' -- Uncle Ben Parker</li>
-			<li></li>
+			<li>'You can observe alot by watching' -- Yogi Bera</li>
 		</ul>
 	</body>
 </html>
