--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<ul>
 			<li>'With great power, comes great responsibility.' -- Uncle Ben Parker</li>
 			<li>'You can observe alot by watching' -- Yogi Bera</li>
+			<li>'Talk is cheap, shoe me the code' -- Linus Torvalds</li>
 		</ul>
 	</body>
 </html>
