--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 			<li>'Talk is cheap, shoe me the code' -- Linus Torvalds</li>
 			<li>'Every good work of software starts by scratching a developer's personal itch.' -- Eric S. Raymond</li>
 			<li>'Never tell me the odds!' -- Han Solo</li>
+			<li>'Example, you know, far outweighs precept.' -- Thomas Jefferson</li>
+			<li>'I love deadlines.  I lob'</li>
 		</ul>
 	</body>
 </html>
