--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<h1>This web page is blank.</h1>
 		<h2>(Well, mostly blank, anyway!)</h2>
 		<ul>
+			<li>'You can't depend on your eyes when you imagination is out of focus.' -- Mark Twain</li>
 			<li>'With great power, comes great responsibility.' -- Uncle Ben Parker</li>
 			<li>'You can observe alot by watching' -- Yogi Bera</li>
 			<li>'Talk is cheap, shoe me the code' -- Linus Torvalds</li>
