--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<ul>
 			<li>'You can't depend on your eyes when you imagination is out of focus.' -- Mark Twain</li>
 			<li>'With great power, comes great responsibility.' -- Uncle Ben Parker</li>
-			<li>'You can observe alot by watching' -- Yogi Bera</li>
+			<li>'You can observe alot by watching' -- Yogi Berra</li>
 			<li>'Talk is cheap, shoe me the code' -- Linus Torvalds</li>
 			<li>'Every good work of software starts by scratching a developer's personal itch.' -- Eric S. Raymond</li>
 			<li>'Never tell me the odds!' -- Han Solo</li>
@@ -23,6 +23,7 @@
 			<li>'Nothing is more dangerous than an idea, when it's the only one we have.' -- Emile Chartier</li>
 			<li>'Life is like a movie.  Write your own ending.' -- Kermit the Frog</li>
 			<li>"Live long and prosper." -- S'chn T'gai Spock</li>
+			<li>"Love your enemies, for they tell you your faults." -- Benjamin Franklin</li>
 		</ul>
 	</body>
 </html>
